--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
   "description": "Produce and apply json-patch objects",
   "type": "library",
   "license": "LGPL-3.0",
-  "replace" {
+  "replace": {
     "mikemccabe/json-patch-php": "*"
   },
   "autoload": {
